--- a/views/list.ejs
+++ b/views/list.ejs
@@ -10,7 +10,7 @@
          </div>
          <% } %>
          <form class="" action="/" method="post">
-            <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+            <input type="text" name="newItem" placeholder="Nouvelle  tâche" autocomplete="off">
             <button type="submit" name="List" value="<%=listTitle%>">+</button>
          </form>
       </div>
